<resources>
    <string name="app_name">ChatRealTime</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_Message">Enter Message...</string>
    <string name="Login_Email" translatable="false">Email</string>
    <string name="Login_Password">Password</string>
    <string name="btnLogin">Sign In</string>

    <string name="News_Status">Add Status ...</string>
    <string name="News_Post_Blog">Post BLog</string>

    <string name="Profile_SEND_FRIEND_REQUEST">SEND FRIEND REQUEST</string>
    <string name="Profile_DECLINE_FRIEND_REQUEST">DECLINE FRIEND REQUEST</string>

    <string name="Register_Name">Display Name</string>
    <string name="Register_Email" translatable="false">Email</string>
    <string name="Register_Password">Password</string>
    <string name="Register_Text">Register</string>
    <string name="Register_Create_a_new_account">Create A New Account</string>

    <string name="Settings_display_name">Display Name</string>
    <string name="Settings_change_status">CHANGE STATUS</string>
    <string name="Settings_change_image">CHANGE IMAGE</string>
    <string name="Settings_hello" >Welcome to your Account</string>

    <string name="start_login">LOGIN TO YOUR ACCOUNT</string>
    <string name="start_register">Need A NEW ACCOUNT</string>

    <string name="status_your_status">Your Status</string>
    <string name="status_save_change">SAVE CHANGE</string>

    <string name="video_call_start">Start</string>
    <string name="video_call_connect">Connect</string>
    <string name="video_call_disconnect">Disconnect</string>

    <string name="chat_custom_bar_display_name">Display Name</string>
    <string name="chat_custom_bar_last_seen">Last Seen</string>

    <string name="message_single_layout_display_name">Display Name</string>
    <string name="message_single_layout_message_text">Message Text</string>

    <string name="news_posts_layout_display_name">Display Name</string>
    <string name="news_posts_layout_user_default_status">User default status</string>

    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_all_masters">All Masters</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_language">Change Language</string>

</resources>
