<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatrealtime.chatrealtime.RegisterActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/register_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="140dp"
        android:textColorHint="#FFF"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#737070"
            android:textSize="25sp"
            android:hint="@string/Register_Name"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/reg_display_name"
        android:layout_marginTop="13dp"
        android:textColorHint="#FFF"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#737070"
            android:hint="@string/Register_Email"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/reg_email"
        android:layout_marginTop="13dp"
        android:textColorHint="#FFF"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Register_Password"
            android:textSize="25sp"
            android:textColor="#737070"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/reg_password"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/Register_Text"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/Register_Create_a_new_account"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFF"
        />
</RelativeLayout>
